--- a/formas/index.html
+++ b/formas/index.html
@@ -32,6 +32,21 @@
         </div>
 
         <div class="item">
+            <div class="texto">Direita/Esquerda</div>
+            <div class="forma" id="forma5"></div>
+        </div>
+
+        <div class="item">
+            <div class="texto">Esticar</div>
+            <div class="forma" id="forma6"></div>
+        </div>
+
+        <div class="item">
+            <div class="texto">Achatar</div>
+            <div class="forma" id="forma7"></div>
+        </div>
+
+        <div class="item">
             <div class="texto">Tudo</div>
             <div class="forma" id="forma-final"></div>
         </div>
