general index elementos update

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <ul>
             <li> <a href="./cores/index.html"><img src="./folder-solid.svg" alt="Folder"> Cores</a> </li>
             <li> <a href="./formas/index.html"> <img src="./folder-solid.svg" alt="Folder"> Formas</a> </li>
+            <li> <a href="./elementos/index.html"> <img src="./folder-solid.svg" alt="Elementos"> Elementos</a> </li>
         </ul>
     </main>
 </body>
