--- a/elementos/index.html
+++ b/elementos/index.html
@@ -13,11 +13,25 @@
             <label>Quantidade: </label>
             <input type="number" id="quantidade">
         </div>
+
         <div class="item">
             <button id="botao-sequencia">Sequência</button>
-            <div class="numeros" id="resultado"></div>
+            <div class="numeros" id="resultado-sequencia"></div>
         </div>
+
         <div class="item">
+            <button id="botao-impar">Ímpar</button>
+            <div class="numeros" id="resultado-impar"></div>
+        </div>
+
+        <div class="item">
+            <button id="botao-par">Par</button>
+            <div class="numeros" id="resultado-par"></div>
+        </div>
+
+        <div class="item">
+            <button id="botao-multiplos">Multiplos de 5</button>
+            <div class="numeros" id="resultado-multiplos"></div>
         </div>
     </div>
 </body>
