criando tag span no javascript ok

--- a/elementos/index.html
+++ b/elementos/index.html
@@ -16,7 +16,8 @@
 
         <div class="item">
             <button id="botao-sequencia">Sequência</button>
-            <div class="numeros" id="resultado-sequencia"></div>
+            <div class="numeros" id="resultado-sequencia">
+            </div>
         </div>
 
         <div class="item">
