span ok e calcular todos ok

--- a/elementos/index.html
+++ b/elementos/index.html
@@ -16,8 +16,7 @@
 
         <div class="item">
             <button id="botao-sequencia">Sequência</button>
-            <div class="numeros" id="resultado-sequencia">
-            </div>
+            <div class="numeros" id="resultado-sequencia"></div>
         </div>
 
         <div class="item">
@@ -33,6 +32,11 @@
         <div class="item">
             <button id="botao-multiplos">Multiplos de 5</button>
             <div class="numeros" id="resultado-multiplos"></div>
+        </div>
+
+        <div class="item">
+            <button id="botao-calcular-todos">Calcular Todos</button>
+            <button id="botao-limpar-todos">Limpar Todos</button> 
         </div>
     </div>
 </body>
