--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <li> <a href="./cores/index.html"> <img src="./folder-solid.svg" alt="Folder"> Cores</a> </li>
             <li> <a href="./formas/index.html"> <img src="./folder-solid.svg" alt="Folder"> Formas</a> </li>
             <li> <a href="./elementos/index.html"> <img src="./folder-solid.svg" alt="Elementos"> Elementos</a> </li>
+            <li> <a href="./array/index.html"> <img src="./folder-solid.svg" alt="Array"> Array</a></li>
         </ul>
     </main>
 </body>
