--- a/array/index.html
+++ b/array/index.html
@@ -7,14 +7,17 @@
     <link rel="stylesheet" href="./style/styles.css">
 
     <script src="./javascript/main.js" defer></script>
+
     <title>Array</title>
 </head>
 <body>
     <main>
         <div class="action">
-            <button></button>
+            <button id="exibir"> Exibir</button>
+            <button id="vendas100">Vendas maiores do que 100</button>
+            <button id="bonus">Vendas bonus</button>
         </div>
-        <div class="data-container"></div>
+        <div class="data-container" id="data-container"></div>
     </main>
 </body>
 </html>
