add estrutura-de-dados to main index

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <main>
         <h1>Projetos</h1>
         <ul>
-            <li> <a href="./cores/index.html"> <img src="./folder-solid.svg" alt="Folder"> Cores</a> </li>
-            <li> <a href="./formas/index.html"> <img src="./folder-solid.svg" alt="Folder"> Formas</a> </li>
-            <li> <a href="./elementos/index.html"> <img src="./folder-solid.svg" alt="Elementos"> Elementos</a> </li>
-            <li> <a href="./array/index.html"> <img src="./folder-solid.svg" alt="Array"> Array</a></li>
+            <li> <a href="./cores/"> <img src="./folder-solid.svg" alt="Folder"> Cores</a> </li>
+            <li> <a href="./formas/"> <img src="./folder-solid.svg" alt="Folder"> Formas</a> </li>
+            <li> <a href="./elementos/"> <img src="./folder-solid.svg" alt="Elementos"> Elementos</a> </li>
+            <li> <a href="./array/"> <img src="./folder-solid.svg" alt="Array"> Array</a></li>
+            <li> <a href="./estrutura-de-dados/"> <img src="./folder-solid.svg" alt="Estrutura de Dados"> Estrutura de Dados</a></li>
         </ul>
     </main>
 </body>
