estrutura-de-dados js ok

--- a/estrutura-de-dados/index.html
+++ b/estrutura-de-dados/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="./style/styles.css">
 
+    <script src="./javascript/main.js" defer></script>
 
     <title>ESTRUTURA DE DADOS</title>
 </head>
+
 <body>
     <main>
         <div class="action">
-            <button class="exibir">Exibir</button>
+            <button class="exibir" id="exibir">Exibir</button>
         </div>
         <div class="data-container" id="data-container">
-            <div>200</div>
-            <div>500</div>
+
+
         </div>
     </main>
 </body>
+
 </html>
