add apidog to main list

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li> <a href="./elementos/"> <img src="./folder-solid.svg" alt="Elementos"> Elementos</a> </li>
             <li> <a href="./array/"> <img src="./folder-solid.svg" alt="Array"> Array</a></li>
             <li> <a href="./estrutura-de-dados/"> <img src="./folder-solid.svg" alt="Estrutura de Dados"> Estrutura de Dados</a></li>
+            <li> <a href="./apidog/"> <img src="./folder-solid.svg" alt="Apidog"> Apidog</a></li>
         </ul>
     </main>
 </body>
